fix error contrast

--- a/style.css
+++ b/style.css
@@ -1080,16 +1080,20 @@ h4 {
 }
 
 .footer__lien {
-    color: #000000!important;
+    color: #FFFFFF!important;
     width: 100%;
     height: 40px;
 
+}
+.title__ul {
+    color: #FFFFFF!important;
 }
 .footer__li {
     height: 40px;
 }
 .footer__title {
     font-size: 1.3rem;
+    color: #FFFFFF!important;
 }
 
 #address {
